# intelliperf

./: CITATION.cff  README.md  gemm_output.txt  gemm_output_final.txt  pyproject.toml  reduce_test.txt  run_all.sh  visualize_swizzling.py
apptainer/: build.sh  intelliperf.def  run.sh  run_cmd.sh
docker/: build.sh  intelliperf.Dockerfile  run.sh
docs/: CONTRIBUTING.md  DEVCLOUD.md  IntelliPerf.md
docs/assets/: intelliperf.patch
examples/: CMakeLists.txt  README.md
examples/access_pattern/: CMakeLists.txt
examples/access_pattern/uncoalesced/: uncoalesced.hip
examples/bank_conflict/: CMakeLists.txt
examples/bank_conflict/b2b_matrix_transpose/: b2b_matrix_transpose.hip
examples/bank_conflict/llm.c/: requirements.txt
examples/bank_conflict/matrix_transpose/: matrix_transpose.hip
examples/bank_conflict/reduce/: reduce.hip
examples/bank_conflict/synthetic/: synthetic.hip
examples/bank_conflict/transpose_scale_add/: transpose_scale_add.hip
examples/bank_conflict/transpose_scale_add_templated/: transpose_scale_add_templated.hip
examples/basic/: CMakeLists.txt
examples/basic/vector_add/: vector_add.hip
examples/contention/: CMakeLists.txt
examples/contention/histogram/: histogram.hip
examples/contention/reduction/: reduction.hip
examples/contention/reduction_optimized/: reduction_optimized.hip
examples/contention/simple_reduction/: simple_reduction.hip
examples/scripts/: build_examples.sh
examples/torch/: add.py  gemm.py
examples/triton/: benchmark_kernels.py  gemm.py  reduce.py
examples/triton/autogen_10/: conv2d.py  fft.py  fused_attention.py  fused_elementwise.py  gemm.py  layer_norm.py  run_all_py.sh  softmax.py  spmv.py  stencil_2d.py  transpose.py
examples/triton/autogen_10/swizzling_logs/: conv2d_log.txt  fused_attention_log.txt  fused_elementwise_log.txt  gemm_log.txt  layer_norm_log.txt  softmax_log.txt  spmv_log.txt  stencil_2d_log.txt  transpose_log.txt
examples/triton/autogen_10/swizzling_logs_2/: conv2d_log.txt  conv2d_log_final.txt  conv2d_performance.csv  fused_attention_log.txt  fused_attention_log_final.txt  fused_elementwise_log.txt  fused_elementwise_log_final.txt  gemm_log.txt  gemm_log_final.txt  layer_norm_log.txt  layer_norm_log_final.txt  softmax_log.txt  softmax_log_final.txt  spmv_log.txt  spmv_log_final.txt  spmv_optimized.py  spmv_performance.csv  stencil_2d_log.txt  stencil_2d_log_final.txt
examples/triton/autogen_science_10/: black_scholes.py  fdtd_2d.py  gravity_potential.py  ising_model.py  jacobi_3d.py  lbm_d2q9.py  molecular_dynamics.py  n_body.py  pic_1d.py  smith_waterman.py
examples/triton/autogen_science_10/swizzling_logs/: black_scholes_log.txt  fdtd_2d_log.txt  ising_model_log.txt  jacobi_3d_log.txt  lbm_d2q9_log.txt  molecular_dynamics_log.txt  n_body_log.txt  pic_1d_log.txt  smith_waterman_log.txt
scripts/: build_examples.sh  install_tool.py
src/accordo/: CMakeLists.txt  __init__.py  rebuild.sh
src/accordo/cmake/: AccordoCompilerOptions.cmake  CPM.cmake
src/accordo/cmake/Modules/: FindHSA.cmake
src/accordo/python/: code_gen.py  communicate.py  hip.py  utils.py
src/accordo/python/hip/: dummy.hip  initial_code.hip  optimized_code.hip
src/accordo/src/: CMakeLists.txt  README.md  accordo.hip  accordo.hpp  log.hpp
src/intelliperf/: __init__.py  __main__.py
src/intelliperf/core/: application.py  gpu_spec.py  llm.py  llm_new.py
src/intelliperf/formulas/: atomic_contention.py  bank_conflict.py  diagnose_only.py  formula_base.py  memory_access.py  swizzling.py  swizzling_test.py
src/intelliperf/utils/: env.py  process.py  regex.py
tests/: test_gpu_spec.py  test_matrix_transpose.sh
